--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,7 +14,7 @@ phases:
     commands:
       - echo "Construindo a imagem Docker..."
       - echo "Adicionando variavel NEXT_PUBLIC_API_URL=$API_URL..."
-      - docker build --build-arg NEXT_PUBLIC_API_URL=$API_URL -t $IMAGE_NAME:$IMAGE_TAG 
+      - docker build --build-arg NEXT_PUBLIC_API_URL=$API_URL -t $IMAGE_NAME:$IMAGE_TAG .
   post_build:
     commands:
       - echo "Fazendo push da imagem para o Docker Hub..."
