feature: Criando abstração de variavel da imagem para multiplos ambientes

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,7 +2,7 @@ version: 0.2
 
 env:
   variables:
-    IMAGE_NAME: gabriellucasdev/boa-massa-frontend
+    IMAGE_NAME: $IMAGE_NAME_MASTER
     IMAGE_TAG: latest
 
 phases:
