fix: Correção para usar variavel do pipeline

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,7 +2,6 @@ version: 0.2
 
 env:
   variables:
-    IMAGE_NAME: $IMAGE_NAME_MASTER
     IMAGE_TAG: latest
 
 phases:
@@ -14,11 +13,12 @@ phases:
     commands:
       - echo "Construindo a imagem Docker..."
       - echo "Adicionando variavel NEXT_PUBLIC_API_URL=$API_URL..."
-      - docker build --build-arg NEXT_PUBLIC_API_URL=$API_URL -t $IMAGE_NAME:$IMAGE_TAG .
+      - echo "Realizando build da imagem $IMAGE_NAME_MASTER"
+      - docker build --build-arg NEXT_PUBLIC_API_URL=$API_URL -t $IMAGE_NAME_MASTER:$IMAGE_TAG .
   post_build:
     commands:
       - echo "Fazendo push da imagem para o Docker Hub..."
-      - docker push $IMAGE_NAME:$IMAGE_TAG
+      - docker push $IMAGE_NAME_MASTER:$IMAGE_TAG
       - echo "Build e push concluídos com sucesso!"
 
 artifacts:
