fix: Ajuste para criar nome da imagem de forma dinâmica

--- a/Dockerrun.aws.json.template
+++ b/Dockerrun.aws.json.template
@@ -16,7 +16,7 @@
     },
     {
       "Name": "NEXT_PUBLIC_API_URL",
-      "Value": "http://pizzaria-boamassa-dev-api.us-west-2.elasticbeanstalk.com"
+      "Value": "{{API_URL}}"
     }
   ]
 }
